--- a/css/base.css
+++ b/css/base.css
@@ -408,6 +408,16 @@ template {
 a {
   cursor: pointer;
 }
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+input,
+button {
+  outline: 0;
+}
 /**
  * padding margin start
  */
