--- a/css/base.less
+++ b/css/base.less
@@ -468,6 +468,16 @@ a {
   cursor: pointer;
 }
 
+ul, ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+input, button {
+  outline: 0;
+}
+
 
 /**
  * padding margin start
