--- a/css/components.css
+++ b/css/components.css
@@ -1,3 +1,12 @@
+body {
+  background-color: #6f689a;
+}
+section {
+  margin: 20px;
+}
+.footer {
+  height: 300px;
+}
 .btns {
   font-size: 0;
   -webkit-text-size-adjust: none;
@@ -8,4 +17,8 @@
 .link-squares .link-square {
   float: left;
   margin-right: 10px;
+}
+.link-square-featured {
+  float: left;
+  margin: 10px;
 }
