--- a/css/components.less
+++ b/css/components.less
@@ -1,3 +1,12 @@
+body {
+  background-color: #6f689a;
+}
+section {
+  margin: 20px;
+}
+.footer {
+  height: 300px;
+}
 .btns {
   font-size: 0;
   -webkit-text-size-adjust: none;
@@ -12,3 +21,9 @@
     margin-right: 10px;
   }
 }
+
+.link-square-featured {
+  float: left;
+  margin: 10px;
+}
+
